Implement finishbuttontapped function which stores parsed and downloaded new student location into array. Pop to main map view, updated pins and zoom into latest pin.

--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -435,7 +435,7 @@
         <image name="logo-u" width="62" height="62"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="oHg-0K-4Lx"/>
+        <segue reference="LlE-So-s1f"/>
         <segue reference="fnM-e2-MeS"/>
     </inferredMetricsTieBreakers>
 </document>
